erDiagram
    TEACHER ||--o{ MUSIC_COURSE : responsible_for
    ROOM o|--o{ MUSIC_COURSE : hosts
    MUSIC_COURSE ||--o{ ENROLLMENT : has
    STUDENT ||--o{ ENROLLMENT : makes
    MUSIC_COURSE ||--o{ COURSE_INSTRUMENT : requires
    INSTRUMENT ||--o{ COURSE_INSTRUMENT : is_required_by

    TEACHER {
        integer id PK
        string staff_code UK
        string name
    }
    ROOM {
        integer id PK
        string room_code UK
        integer capacity
    }
    MUSIC_COURSE {
        integer id PK
        string course_code UK
        string title
        decimal fee
        string level
        integer teacher_id FK
        integer room_id FK
    }
    STUDENT {
        integer id PK
        string email UK
        string name
    }
    ENROLLMENT {
        integer course_id PK, FK
        integer student_id PK, FK
        date enrolled_at
        string status
    }
    INSTRUMENT {
        integer id PK
        string instrument_code UK
        string name
    }
    COURSE_INSTRUMENT {
        integer course_id PK, FK
        integer instrument_id PK, FK
        integer quantity_required
    }
